# C-Project

./: .f2.swp  .gitignore  .test2.bin.swp  CMakeLists.txt  FileListFuncs.c  FileListFuncs.h  MacroListFuncs.c  MacroListFuncs.h  SymbolListFuncs.c  SymbolListFuncs.h  asembler.c  binaryMaker.c  binaryMaker.h  core  d  f1.as  f2.as  f3.as  hashc.c  helpers.c  helpers.h  macroDecoder.c  macroDecoder.h  makefile  outputMaker.c  outputMaker.h  prototypes.h  protoypes.h  struct.h  test  testthingy.c  to do
all files in once/: allfilestestSTDOUT  alltest.as  test.ent  test.ext  test.ob  test2.am  test2.as  test2.ob  testerrors.ob
all instruction/: alltest.am  alltest.ob
test1/: test.as  test.ob
testerrors/: testerrors.am  testerrors.ob  testerrorsSTDOUT
testmacro/: test2.ent  test2.ob
